# aw-bookmark

./: .gitignore  README.md  SIGNAL_SETUP.md  aw-sync.md  config.example.json  pyproject.toml
.github/workflows/: release.yml  validate.yml
extension/: manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js
scripts/: build-extension.sh
src/aw_bookmark/: __init__.py  config.py  server.py
src/aw_bookmark/messaging/: __init__.py  base.py  manager.py
src/aw_bookmark/messaging/clients/: __init__.py  discord.py  matrix.py  signal.py  whatsapp.py
tests/: test_discord.py  test_discord_validation.py  test_signal.py  test_signal_validation.py  test_whatsapp.py  test_whatsapp_validation.py
