[project]
name = "aw-bookmark"
version = "1.2.1"
description = "HTTP proxy to store bookmark-pinning events in ActivityWatch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["aw-client>=0.5.15", "flask>=3.1.2"]

[[project.authors]]
name = "Alexandre Girard"
email = "git@alexgirard.com"

[project.scripts]
aw-bookmark = "aw_bookmark.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
